--- a/src/all.module.css
+++ b/src/all.module.css
@@ -3540,12 +3540,12 @@ width: 100%!important;
 
 input[type=range] {
     height: 3px;
-    -webkit-appearance: none;
     margin: 0px 0;
     width: 100%;
     width: 350px;
     margin: 0px auto;
     display: block;
+    background-color: #9a905d;
 }
 
 input[type=range]:focus {
@@ -3558,16 +3558,9 @@ input[type=range]::-webkit-slider-runnable-track {
     cursor: pointer;
     animate: 0.2s;
     border-radius: 10px;
-    background-color: #000 !important;
+    
 }
-.dark input[type=range]::-webkit-slider-runnable-track {
-    width: 100%;
-    height: 5px !important;
-    cursor: pointer;
-    animate: 0.2s;
-    border-radius: 10px;
-    background-color: #7c77a5 !important;
-}
+
 
 input[type=range]::-webkit-slider-thumb {
     height: 20px;
@@ -3600,6 +3593,194 @@ input[type=range]::-ms-thumb {
     border-radius: 12px;
     cursor: pointer;
 }
+
+
+input[type=range] {
+    -webkit-appearance: none;
+    width: 350px;
+    display: block;
+    margin: 0px auto;
+    height: 5px;
+    background: transparent;
+}
+
+input[type=range]:focus {
+    outline: none;
+}
+
+/* Track styling for WebKit browsers (Chrome, Safari) */
+input[type=range]::-webkit-slider-runnable-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    background: #dcdcdc;
+}
+
+/* Thumb styling for WebKit browsers */
+input[type=range]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    height: 20px;
+    width: 20px;
+    border-radius: 12px;
+    background: #dcdcdc;
+    cursor: pointer;
+    margin-top: -8px; /* Adjust based on your track height */
+}
+
+/* Progress bar styling for WebKit browsers */
+input[type=range]::-webkit-slider-runnable-track {
+    background: linear-gradient(to right, rgb(240,146,66) var(--range-progress), #dcdcdc var(--range-progress));
+}
+
+/* Track styling for Firefox */
+input[type=range]::-moz-range-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: #dcdcdc;
+}
+
+/* Progress bar styling for Firefox */
+input[type=range]::-moz-range-progress {
+    height: 5px;
+    border-radius: 10px;
+}
+
+/* Thumb styling for Firefox */
+input[type=range]::-moz-range-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 12px;
+    background: rgb(94, 94, 94);
+    cursor: pointer;
+}
+
+/* Track styling for IE */
+input[type=range]::-ms-track {
+    width: 100%;
+    height: 5px;
+    cursor: pointer;
+    background: transparent; /* Hide the default track */
+    border-color: transparent;
+    color: transparent;
+}
+
+/* Progress bar styling for IE */
+input[type=range]::-ms-fill-lower {
+    border-radius: 10px;
+}
+
+/* Remaining track styling for IE */
+input[type=range]::-ms-fill-upper {
+    background: #dcdcdc;
+    border-radius: 10px;
+}
+
+/* Thumb styling for IE */
+input[type=range]::-ms-thumb {
+    height: 20px;
+    width: 20px;
+    border-radius: 12px;
+    background: white;
+    cursor: pointer;
+    margin-top: -8px; /* Adjust based on your track height */
+}
+
+.OperationsContentArea{
+    position: relative;
+}
+
+.OperationsContentArea .AddButton{
+    position: absolute;
+    top: -70px;
+    right: 0px;
+}
+.OperationsContentArea .OperationsContentAreaBlock{
+    background-color: #f0f4f8;
+    width: 30%;
+    display: inline-block;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.dark .OperationsContentArea .OperationsContentAreaBlock{
+    background-color: #29263e;
+}
+
+.OperationsContentArea .OperationsContentAreaBlock > div{
+    display: inline-block!important;
+    border-color: #ffffff!important;
+}
+.dark .OperationsContentArea .OperationsContentAreaBlock > div{
+    border-color: #403b63!important;
+}
+
+.OperationsContentArea .OperationsContentAreaBlock .TradeMarketToken .TradeMarketTokenSelector{
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+.dark .OperationsContentArea .OperationsContentAreaBlock .TradeMarketToken .TradeMarketTokenSelector{
+    background-color: #403b63;
+}
+
+.OperationsContentArea .OperationsContentAreaBlock > span {
+    font-weight: bold;
+    padding-bottom: 20px;
+    display: inline-block;
+}
+
+.OperationsContentArea .OperationsContentAreaBlock > label {
+    font-weight: bold;
+    margin-top: 20px;
+    display: block;
+}
+.OperationsContentArea .OperationsContentAreaBlock > label >span {
+   display: inline-block;
+   margin-bottom: 10px;
+}
+
+.OperationsContentArea a.RoundedButton{
+    margin: 0px;
+    margin-top: 20px;
+    border-radius: 6px;
+    background-color: #ffffff;
+    padding-top: 5px;
+    width: 35px;
+    height: 35px;
+}
+
+.dark .OperationsContentArea a.RoundedButton{
+    background-color: #403b63;
+}
+
+.OperationsContentArea .ModalBox{
+    margin: 0 auto;
+}
+
+.OperationsContentArea .ActionInfoSectionAMMLabel {
+    font-size: 10px;
+}
+.OperationsContentArea  .ActionInfoSection h4{
+    display: block;
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+.OperationsContentArea .TradeMarketToken .TradeMarketTokenSelector>span {
+    font-size: 14px;
+    top: -12px;
+}
+
+.OperationsContentArea .OperationsContentArea a.RoundedButton {
+    width: 35px;
+    height: 35px;
+    padding-top: 5px;
+}
+
 
 .VersionFarm {
     color: #bd84fb;
@@ -11280,6 +11461,7 @@ input[type=range]::-ms-thumb {
 
 .light .CreationPageLabelF input {
     background-color: #ffffff;
+    margin-top: 15px;
 }
 
 .biz .CreationPageLabelF input {
@@ -11503,12 +11685,14 @@ input {
 }
 
 .TradeMarketToken .TradeMarketTokenSelector {
-    background-color: #f2f4f8;
+    background-color: #ffffff;
     margin: 0px;
     width: 100%;
     text-align: left;
     padding-left: 8px;
     padding: 6px;
+    border: 2px solid #e7ecf4;
+    border-radius: 8px;
 }
 
 .CollectionRightSubtitles {
@@ -14393,54 +14577,49 @@ input {
 .light input[type=range]::-webkit-slider-runnable-track {
     border: 0px solid #000000;
     box-shadow: 0px 0px 0px #50555C;
-    background: #ffffff;
+
     height: 1px;
 }
 
 .dark input[type=range]::-webkit-slider-runnable-track {
     border: 0px solid #ffffff;
     box-shadow: 0px 0px 0px #ffffff;
-    background: #ffffff;
+
 
 }
 
-.light input[type=range]::-webkit-slider-thumb {
+ input[type=range]::-webkit-slider-thumb {
     background: #000;
     box-shadow: 0px 0px 0px #000000;
     border: 5px solid #ddd;
 }
 
-.dark input[type=range]::-webkit-slider-thumb {
-    background: #f09243;
-    box-shadow: 0px 0px 0px #ffffff;
-    border: 0px solid #d9d2c2a3;
-}
 
 .light input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ffffff;
+   
 }
 
 .biz input[type=range]:focus::-webkit-slider-runnable-track {
-    background: linear-gradient(0deg, #ffffff 50%, #bfc0ea 100%);
+  
 }
 
 .dark input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #f09243;
+   
 }
 
 .sepia input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #ffffff;
+  
 }
 
 .matrix input[type=range]:focus::-webkit-slider-runnable-track {
-    background: #f2f4f8;
+    
 }
 
 .light .SettingBLabPerch input[type=range]:focus::-webkit-slider-runnable-track,
 .light .SettingBLabPerch input[type=range]::-webkit-slider-runnable-track,
 .light .RemoveLiquiditytools input[type=range]:focus::-webkit-slider-runnable-track,
 .light .RemoveLiquiditytools input[type=range]::-webkit-slider-runnable-track {
-    background: #f2f4f8;
+   
 }
 
 .light input[type=range]::-moz-range-track {
@@ -14479,7 +14658,7 @@ input {
     box-shadow: 0px 0px 0px #50555C;
 }
 
-.light input[type=range]::-moz-range-thumb {
+input[type=range]::-moz-range-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
     background: #141416;
@@ -14507,7 +14686,7 @@ input {
     box-shadow: 0px 0px 0px #50555C;
 }
 
-.light input[type=range]::-ms-thumb {
+ input[type=range]::-ms-thumb {
     box-shadow: 0px 0px 0px #000000;
     border: 0px solid #000000;
     background: #141416;
@@ -14522,7 +14701,6 @@ input {
 .dark input[type=range]::-ms-thumb {
     box-shadow: 0px 0px 0px #ffffff;
     border: 0px solid #ffffff;
-    background: #28253e;
 }
 
 .sepia input[type=range]::-ms-thumb {
@@ -15053,7 +15231,12 @@ input {
         background-color: #403b63 !important;
     }
 
-
+    .OperationsContentArea .OperationsContentAreaBlock{
+        width: 90%;
+        display: block;
+        margin:0 auto;
+        margin-bottom: 20px;
+    }
 }
 
 .MenuProfile a img {
@@ -16174,6 +16357,29 @@ input {
 }
 .SliderInputElement{
     margin-top: 10px;
+    width: 45%;
+    display: inline-block;
+    margin-right: 2%;
+    margin-left: 2%;
+    padding: 10px;
+    border-radius: 8px;
+    border: 2px solid #f0f4f7;
+}
+.dark .SliderInputElement{
+    border: 2px solid #29263f;
+    background: #29263f;
+}
+.TokenMintOwnerArea{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    border-bottom: 1px solid #fff;
+}
+.light .TokenMintOwnerArea{
+    margin-bottom: 12px;
+}
+.swapEthArea .ActionInfoSection > div{
+    display: inline-block!important;
 }
 .FactoryCreateWrapper {
     display: flex;
@@ -16585,7 +16791,8 @@ input {
         margin: 10px auto;
     }
     .FancyExplanationCreate h2 {
-        text-align: center;
+        text-align: left;
+        font-size: 20px;
     }
     .CreationPageLabelF {
         width: 100%!important;
